# fs-calendar-templates

./: .gitignore  Makefile  README.md  address-macros.tex  addresses.tex  calculate_data.py  calendar-shared.tex  desk-addresses.tex  desk-cover.tex  dodo.py  index.html  notes.md  package-lock.json  package.json  pyproject.toml  text-english.tex  text-german.tex  text-italian.tex  text-norwegian.tex  text-portuguese.tex  text-thai.tex  translation-keys.tex  wall-addresses.tex  wall-cover.tex  wallcalendar.cls
data/: astromoondays.csv  events.csv  mark_defaults.csv  marks_desk.csv  marks_desk_portrait.csv  marks_wall.csv
desk-landscape-one-side/: calendar-local.sty  desk-addresses.tex  desk-cover.tex  desk-landscape-layout.sty  desk-local.sty  desk.tex
desk-portrait-one-side/: addresses.tex  calendar-local.sty  desk-addresses.tex  desk-cover.tex  desk-local.sty  desk.tex
docs/: English-2018.docx  calendar-texts.docx
i18n/: wallcalendar-thai.tex
sass/: _typefaces.scss  main.scss
scripts/: helpers.lua  jpg-to-92dpi.sh  multiply_effect.py  pdf_to_png.py
template-helpers/: calculate-data.go  calculate-data.py  helpers.lua  jpg-to-pdf.sh  pdf-to-cmyk.sh
wall-landscape-one-side/: wall-addresses.tex  wall-cover-italian.tex  wall-cover-portuguese.tex  wall-cover.tex  wall-local.sty  wall.tex
wall-portrait-largecal-one-side/: addresses.tex  helpers.lua  mark_defaults.csv  wall-local.sty  wallcalendar-csv.lua  wallcalendar-date.lua  wallcalendar.cls
wall-portrait-one-side/: addresses.tex  calendar-local.sty  wall-addresses.tex  wall-cover.tex  wall-local.sty  (+2 more)
(+45 files in other folders)
